move overflow hidden from page  to sections. fix book link clickable size with align-items flex-start. change book-pic implementation to object-fit & object position

--- a/blocks/khan/__book-container/khan__book-container.css
+++ b/blocks/khan/__book-container/khan__book-container.css
@@ -1,5 +1,4 @@
 .khan__book-container {
   display: flex;
-  max-height: 608px;
-  overflow: hidden;
+  align-items: flex-start;
 }
